# library

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTROL  make.cmd  makefile  portfile.cmake  readme.md  vcpkg.json
include/: library.hpp
res/: config.cmake.in  format.cmake
src/: benchmark.cpp  main.cpp  test.cpp
src/benchmarks/: random.cpp
src/tests/: random.cpp
